# global-job-market-intelligence-platform

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
.streamlit/: config.toml
assets/: style.css
config/: logging_config.py  settings.py
data/: generate_synthetic_data.py
data/processed/: jobs_processed.csv
db/: schema.sql
etl/: fetch_jobs.py
global_job_market_intelligence_platform/: requirements.txt
global_job_market_intelligence_platform/app/pages/: 1_dashboard.py  2_skills.py  3_job_search.py
global_job_market_intelligence_platform/etl/: fetch_jobs.py
models/: train_model.py
nlp/: skill_extraction.py
pages/: 1_Market_Overview.py  1_dashboard.py  2_Skill_Analytics.py  2_skills.py  3_Salary_Intelligence.py  3_job_search.py  4_Geographic_Insights.py  5_Job_Explorer.py  6_Salary_Predictor.py  7_Data_Upload_Analyzer.py
scripts/: update_pipeline.py
tests/: conftest.py  test_chart_helpers.py  test_data_generation.py  test_model.py  test_skill_extraction.py
utils/: chart_helpers.py  data_loader.py  ui_components.py
