[project]
name = "global-job-market-intelligence-platform"
version = "2.0.0"
description = "Real-time analytics across global job postings with NLP skill extraction and ML salary prediction."
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top (Streamlit requires st.set_page_config first)
    "B008",   # function call in default arg (Streamlit pattern)
    "N806",   # variable in function should be lowercase (scikit-learn convention uses X)
    "SIM105", # contextlib.suppress (less readable for simple cases)
    "SIM108", # ternary operator
    "TC002",  # move third-party import into type-checking block (over-pedantic)
    "TC003",  # move stdlib import into type-checking block (over-pedantic)
]

[tool.ruff.lint.isort]
known-first-party = ["config", "utils", "nlp", "models", "etl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
